[package]
name = "hyperx"
version = "1.3.0"
description = "Hyper's typed header module, eXtracted and improved"
readme = "README.md"
documentation = "https://docs.rs/hyperx"
repository = "https://github.com/dekellum/hyperx"
license = "MIT"
authors = ["David Kellum <dek-oss@gravitext.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server"
]
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
build = "build.rs"

[dependencies]
base64              = { version=">=0.10.1, <0.14" }
bytes               = { version=">=1.0.0, <1.1.0" }
http                = { version=">=0.2.2, <0.3" }
httpdate            = { version=">=0.3.2, <0.4" }
language-tags       = { version=">=0.2, <0.3" }
mime                = { version=">=0.3.2, <0.4" }
percent-encoding    = { version=">=2.1.0, <2.2" }
unicase             = { version=">=2.6.0, <2.7" }

[features]
nightly = []
compat = [] # no-op for backward compatibility
headers = []

[package.metadata.docs.rs]
features = ["headers"]
