[package]
name = "hyperx"
version = "1.3.0"
description = "Hyper's typed header module, eXtracted and improved"
readme = "README.md"
documentation = "https://docs.rs/hyperx"
repository = "https://github.com/dekellum/hyperx"
license = "MIT"
authors = ["David Kellum <dek-oss@gravitext.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server"
]
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
build = "build.rs"

[dependencies]
base64              = "0.13"
bytes               = "1"
http                = "0.2.2"
httpdate            = "0.3.2"
httparse            = "1"
language-tags       = "0.2"
mime                = "0.3.2"
percent-encoding    = "2.1"
unicase             = "2.6"

[features]
nightly = []
compat = [] # no-op for backward compatibility
headers = []

[package.metadata.docs.rs]
features = ["headers"]
